<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Well-Being</string>
    <string name="action_settings">Change pop-up time</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="progress">0/4 Questions Completed</string>
    <string name="delay_exp">Could you explain why you had to delay taking the survey?</string>
    <string name="survey_name">Survey</string>
    <string name="survey_time">Time</string>
    <string name="scale1">1 - Not at all</string>
    <string name="scale2">2 - Very little</string>
    <string name="scale3">3 - Somewhat</string>
    <string name="scale4">4 - Quite a bit</string>
    <string name="scale5">5 - Extremely</string>
    <string name="Q1">Think about how you are feeling right now, are you feeling...</string>
    <string name="Q1.1">1.1  Angry or Irritated?</string>
    <string name="Q1.2">1.2  Stressed or Overwhelmed?</string>
    <string name="Q1.3">1.3: Enthusiastic/Excited?</string>
    <string name="Q1.4">1.4: Happy or Glad?</string>
    <string name="finish">Thank you for your responses</string>
    <string name="title_activity_question2">Question 1.2</string>
    <string name="title_activity_question1">Question 1.1</string>
    <string name="title_activity_finish">Complete Survey</string>
    <string name="title_activity_delay_explanation">Delayed Survey</string>
    <string name="title_activity_start">Start</string>
    <string name="start">Well-Being</string>
    <string name="okay">OK</string>
    <string name="title_activity_question3">Question3</string>
    <string name="title_activity_question4">Question4</string>
    <string name="time_change">Change Pop-Up Time</string>
    <string name="manual_startup">Start Survey Manually</string>
    <string name="Checkmark">Checkmark</string>
    <string name="prev_started">previously_started</string>

</resources>
