<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Question"
    android:background="#ff364cff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Q1"
        android:id="@+id/txtBaseQues"
        android:textColor="#ffffffff"
        android:textSize="37sp"
        android:typeface="sans"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Q1.1"
        android:id="@+id/txtSubQues"
        android:textColor="#ffffffff"
        android:typeface="sans"
        android:textSize="25.5sp"
        android:layout_below="@+id/txtBaseQues"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/txtSubQues"
        android:id="@+id/rdioGrpScale"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdio1"
        android:text="@string/scale1"
            android:checked="false"
            android:textColor="#ffffffff"
            android:textSize="25.5dp"
            android:typeface="sans" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdio2"
            android:text="@string/scale2"
            android:checked="false"
            android:textColor="#ffffffff"
            android:textSize="25.5dp" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdio3"
            android:text="@string/scale3"
            android:checked="false"
            android:textColor="#ffffffff"
            android:textSize="25.5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdio4"
            android:text="@string/scale4"
            android:checked="false"
            android:textColor="#ffffffff"
            android:textSize="25.5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdio5"
            android:text="@string/scale5"
            android:checked="false"
            android:textColor="#ffffffff"
            android:textSize="25.5dp" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/bttnNext"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
