<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sanders.natalie.well_being.Finish"
    android:background="#ff364cff">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/bttnNext"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:textSize="19sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/bttnBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff"
        android:textSize="19sp" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/finish"
    android:id="@+id/txtThanks"
    android:layout_above="@+id/txtProgress"
    android:layout_centerHorizontal="true"
    android:textSize="25sp"
    android:layout_marginBottom="7dp"
    android:textColor="#ffffffff"
    android:textAlignment="center"
    android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/progress"
        android:id="@+id/txtProgress"
        android:layout_above="@+id/bttnNext"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:gravity="center_vertical|center_horizontal"
        android:editable="true" />

</RelativeLayout>
