<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sanders.natalie.well_being.Question4"
    android:background="#ff364cff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Q1"
        android:id="@+id/txtBaseQues"
        android:textColor="#ffffffff"
        android:textSize="37sp"
        android:typeface="sans"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Q1.4"
        android:id="@+id/txtQ1.4"
        android:textColor="#ffffffff"
        android:typeface="sans"
        android:layout_below="@+id/txtBaseQues"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:textSize="25.5dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtQ1.4"
        android:layout_above="@+id/bttnNext"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:id="@+id/tableAns">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="#ff85ff31"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView1"
                android:text="@string/scale1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff364cff"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="#ff85ff31"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/txtSurveyTime"
                android:text="@string/scale2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff364cff"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="#ff85ff31"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView3"
                android:text="@string/scale3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff364cff"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="#ff85ff31"
            android:layout_marginBottom="2dp"
            android:focusable="true"
            android:clickable="true">

            <TextView
                android:id="@+id/textView4"
                android:text="@string/scale4"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff364cff"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="#ff85ff31"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/textView5"
                android:text="@string/scale5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff364cff"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/bttnBack"
        android:textColor="#ffffffff"
        android:layout_toRightOf="@+id/bttnNext"
        android:layout_alignTop="@+id/bttnNext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/bttnNext"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
